--- a/ammn-frontend/package.json
+++ b/ammn-frontend/package.json
@@ -48,6 +48,7 @@
     "embla-carousel-react": "^8.5.1",
     "framer-motion": "^11.11.17",
     "input-otp": "^1.4.1",
+    "jwt-decode": "^4.0.0",
     "lucide-react": "^0.460.0",
     "next": "15.0.3",
     "next-themes": "^0.4.3",
